--- a/AspNetCoreSample/AspNetCoreWebAPI/appsettings.json
+++ b/AspNetCoreSample/AspNetCoreWebAPI/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
+  "BookstoreDatabaseSettings": {
+    "BooksCollectionName": "Books",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "BookstoreDb"
+  },
   "AllowedHosts": "*"
 }
