Create DB with EnsureCreated

--- a/AspNetCoreSample/RazorPageWIthEFCore/appsettings.json
+++ b/AspNetCoreSample/RazorPageWIthEFCore/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SchoolContext": "Server=(localdb)\\mssqllocaldb;Database=SchoolContext-00a1520e-fb40-4e17-b982-f817e63ebb41;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
