--- a/AspNetCoreSample/AspNetCoreWebAPI/AspNetCoreWebAPI.csproj
+++ b/AspNetCoreSample/AspNetCoreWebAPI/AspNetCoreWebAPI.csproj
@@ -17,4 +17,6 @@
     <PackageReference Include="MongoDB.Driver" Version="2.9.2" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
