Use Option to Load appsettings.json

--- a/AspNetCoreSample/AspNetCoreWebAPI/appsettings.json
+++ b/AspNetCoreSample/AspNetCoreWebAPI/appsettings.json
@@ -12,5 +12,7 @@
     "DatabaseName": "BookstoreDb"
   },
   "MemoryKey1": "FromAppSetting",
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "option1": "value1_from_json",
+  "option2": -1
 }
