--- a/AspNetCoreSample/AspNetCoreWebAPI/appsettings.json
+++ b/AspNetCoreSample/AspNetCoreWebAPI/appsettings.json
@@ -14,5 +14,9 @@
   "MemoryKey1": "FromAppSetting",
   "AllowedHosts": "*",
   "option1": "value1_from_json",
-  "option2": -1
+  "option2": -1,
+  "subsection": {
+    "suboption1": "subvalue1_from_json",
+    "suboption2": 200
+  }
 }
